# port67

./: .gitignore  LICENSE  Makefile  README.md  README.txt  css_src  index.md  port67.cabal  serve  support.md  template.html
Haskell/: 1-getting-started.md  2-usage.md  3-types.md  index.md  like-c.md  what-haskell.md  why-haskell.md
Section1/: 1-terminal.md  10-reflection.md  2-filesystem.md  3-python.md  4-files.md  4-text-editors.md  5-vim.md  6-executing-python.md  7-io.md  8-types.md  9-control-flow.md  Binary.md  ControlFlow.md  ExecutingPython.md  Filesystem.md  IO.md  Interpreted.md  Python.md  Terminal.md  TextEditors.md  Types.md  Vim.md  index.md
Section1/Fun/: bash.md  fib.py  fibonacci.md  fibonacci_fill-in.md  fibonacci_read.md  fizzbuzz.md  fizzbuzz_fill-in.md  fizzbuzz_read.md  index.md  more-vim.md  vimrc.md
Section2/: 1-interpreted-compiled.md  10-arrays.md  11-strings.md  12-pointers.md  13-stack-vs-heap.md  14-scope.md  15-scope2.md  16-structs.md  17-io.md  18-c-program.md  19-c-program2.md  2-control-flow.md  20-c-program3.md  21-c-program4.md  3-main-breakdown.md  4-variables.md  5-function-headers.md  5-functions.md  5.5-alternate-types.md  6-binary.md  6-types-basis.md  7-c-types.md  7-fun-types.md  7-memory.md  8-c-types.md  8-interpreting-memory.md  9-c-types.md  index.md  reflection.md
Section2/Fun/: index.md
Section3/: 1-networking.md  2-ethernet.md  3-collisions.md  index.md
Top/: README.md  contact.md  index.md  support.md
app/: Main.hs
css/: code.css  site.css  site.css.bak
docs/: CNAME  index.html
docs/ch1/: arrays.html  conclusion.html  executable.html  filesystem-2.html  filesystem.html  first-program.html  index.html  terminal.html  types.html  vim.html
docs/ch2/: basic-c-2.html  basic-c-3.html  basic-c-4.html  basic-c-5.html  basic-c.html  filesystem-c.html  filesystem-theory.html  index.html  memory-c.html
docs/ch3/: index.html  memory-theory.html
docs/ch4/: index.html
docs/css/: code.css  site.css  structure.css
docs/images/: graph.dot
docs/posts/: blah.html  index.html  sample-post.html
site/: index.md
site/ch1/: arrays.md  binary.md  conclusion.md  first-program.md  index.md  terminal.md  types.md  vim.md
site/ch2/: basic-c-2.md  basic-c-3.md  basic-c-4.md  basic-c-5.md  basic-c.md  index.md
site/ch3/: index.md  memory-c.md  memory-theory.md
site/ch4/: index.md  (+2 more)
src/: Port67.hs
test/: Test.hs
(+46 files in other folders)
