cabal-version: 1.12

name:           port67
version:        0.1.0.0
synopsis:       A site about Computer Science
description:    A Computer Science education site covering everything you need to know.
category:       web
homepage:       https://port67.org
bug-reports:    https://github.com/patrickdoc/port67/issues
author:         Patrick Dougherty
maintainer:     patrick.doc@port67.org
copyright:      2020 Patrick Dougherty
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/patrickdoc/port67

executable build-site
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , containers
    , lens
    , lens-aeson
    , shake
    , slick
    , text
    , unordered-containers
  default-language: Haskell2010
